--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "sequelize",
-    "password": "sequelize",
+    "username": "alura",
+    "password": "admin123",
     "database": "escola_ingles",
     "host": "127.0.0.1",
     "dialect": "mysql"
@@ -11,13 +11,15 @@
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   }
 }
